# dyrapy

./: LICENSE.txt  README.md  setup.cfg  setup.py
dyrapy/: __init__.py  __main__.py
dyrapy/datasets/: __init__.py  _base.py
dyrapy/datasets/data/: cadastro_escolas.csv  matriculas_escolas.csv  ouvidoria.csv
dyrapy/datasets/descr/: escolas.rst  ouvidoria.rst
dyrapy/tests/: __init__.py  test_load_escolas.py  test_load_ouvidoria.py
examples/: escolas.py  ouvidoria.py
