[metadata]
name = dyrapy
version = attr: dyrapy.__version__
author = Marco Aurélio Souza Mangan
author-email = marco.mangan@gmail.com
home-page = https://github.com/masmangan/dyrapy
url = https://github.com/masmangan/dyrapy
description = DyraPy is open-source software for data analysis of public open data.
long-description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license-file = LICENSE.txt 
platform = any
keywords = ['Data Science', 'Dataset']
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/masmangan/dyrapy/issues
    Changelog = https://github.com/masmangan/dyrapy/blob/master/CHANGELOG.md

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
packages = find:
test_suite = tests
setup_requires =
    setuptools >= 50.0
    wheel
install_requires =
  pyyaml
  pandas
  matplotlib

# [options.package_data]

[options.entry_points]
console_scripts =
  dyrapy = dyrapy.__main__:main

[options.extras_require]
dev = 
    %(test)s
    pyyaml
test = 
    %(lint)s
lint = pydocstyle
	flake8
	pylint

[bdist_wheel]
universal = true

[check]
metadata = true
strict = true

[sdist]
formats = gztar

# Tools

[coverage:run]
omit =
    .tox/*
    .venv/*
    /usr/*
    tests/*
    features/*
    */.local/*

[coverage:report]
show_missing = true
skip_covered = true
skip_empty = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError
    # raise MemoryError
    # if __name__ == .__main__.:
    # if typing.TYPE_CHECKING:

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D203, D212

[flake8]
max-line-length = 80
doctests = True
max-complexity = 10
ignore = D, E203, W503
exclude =
    .tox
    .venv
    .git
    .eggs
    __pycache__
    docs
    build
    dist

[pylint]
max-nested-blocks = 5
ignored-modules = behave
max-line-length = 80
load-plugins = pylint.extensions.mccabe
max-complexity = 10

[behave]
stop = true
stdout_capture = true
stderr_capture = true
junit = false

[gh-actions]
python=
    3.7: py37
    3.8: py38
    3.9: py39

[tox:tox]
envlist= py37, py38, py39
skipsdist = True

[testenv]
commands =
    python3 -m pip install pip --upgrade
    python3 -m pip install -e .[lint]
    black -l 80 --check .
    python3 -m flake8 .
    python3 -m pydocstyle .
    python3 -m pylint dyrapy features setup.py
    python3 -m pip install -e .[test]
    python3 -m coverage run -m behave
    python3 -m coverage run -m pytest
    python3 -m coverage report
